# sdd-workshop

./: .gitignore  pyproject.toml  quickstart_demo.py
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
cli/: main.py
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/checklists/: requirements.md
specs/001-todo-app/contracts/: cli-commands.md
tests/: conftest.py  test_add.py  test_cli.py  test_delete.py  test_done.py  test_edge_cases.py  test_list.py  test_storage_integration.py
todo_lib/: models.py  service.py  storage.py
